--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ border: 2px solid white;
 top: 4rem;
 margin-left: 1rem;
 margin-right: 1rem;
+padding-left: 0.5rem;
 z-index: 3;
 height: calc(5rem + 16vh);
 }
