once again, mobile width fix

--- a/styles.css
+++ b/styles.css
@@ -209,6 +209,7 @@ blockquote {
 	);
 }
 .mobilecont-outer {
+	max-width:30rem;
 	position: sticky;
 	top: 0;
 	z-index: 5;
@@ -222,6 +223,7 @@ blockquote {
 	background-color: black;
 }
 .mobilecont-inner {
+	max-width:30rem;
 	display: flex;
 	height: 200px;
 	justify-content: center;
