--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,9 @@ blockquote {
 	);
 }
 .mobilecont-outer {
-	max-width:20rem;
+	width: 15rem;
+	margin: 0;
+	padding: 0;
 	position: sticky;
 	top: 0;
 	z-index: 5;
@@ -223,6 +225,9 @@ blockquote {
 	background-color: black;
 }
 .mobilecont-inner {
+	width: 28rem;
+	margin: 0;
+	padding: 0;
 	display: flex;
 	height: 200px;
 	justify-content: center;
