--- a/styles.css
+++ b/styles.css
@@ -13,22 +13,12 @@ body {
 	background-color: #000000;
 }
 
-.blayer {
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding-right: 100%;
-	padding-bottom: calc(15rem + 170vh - 5vw);
-	z-index: 1;
-	background: black;
-}
-
 .topimg {
 	position: sticky;
 	z-index: 1;
 	top: 25vh;
 	margin-bottom: 35rem;
-	width: 90%;
+	width: 100%;
 	max-height: 400px;
 }
 
@@ -112,6 +102,12 @@ p {
 	margin-left: 7vw;
 	margin-right: 7vw;
 	z-index: 3;
+	margin-bottom: 10rem;
+}
+
+.bottomspace {
+	padding: 30px;
+	background-color: transparent;
 }
 
 .antext, .antitle, .andate {
@@ -202,7 +198,7 @@ blockquote {
 
 
 :root {
-	--header-outer-height: 750px;
+	--header-outer-height: 650px;
 	--header-inner-height: 75px;
 	--header-height-difference: calc(
 		var(--header-outer-height) - var(--header-inner-height)
