--- a/themes/hugo-paper/layouts/shortcodes/code.html
+++ b/themes/hugo-paper/layouts/shortcodes/code.html
@@ -1,3 +1,3 @@
-<span class="code" style="background-color: rgba(180,180,180,0.6); display: inline-block; border-radius: 4px; line-height: 1.5; color: black;">
-  {{ .Inner | markdownify }}&nbsp
+<span class="code" style="background-color: rgba(180,180,180,0.6); display: inline-block; border-radius: 4px; line-height: 1.4; color: black;">
+  {{ .Inner | markdownify }}
 </span>
