--- a/themes/hugo-paper/layouts/shortcodes/code.html
+++ b/themes/hugo-paper/layouts/shortcodes/code.html
@@ -1,3 +1,5 @@
-<span class="code" style="background-color: rgba(180,180,180,0.6); display: inline-block; border-radius: 4px; line-height: 1.4; color: black;">
-  {{ .Inner | markdownify }} &nbsp
+<span class="code" style="display: inline-block;">
+  <span style="background-color: rgba(180,180,180,0.6); border-radius: 4px; padding-right:3px; padding-left:3px;">
+    {{ .Inner | markdownify }}
+  </span>
 </span>
